--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 }
 
 #post{
+  text-align: left;
   padding: 1em 1em;
   margin: auto;
   color: #5d627b;
@@ -10,4 +11,5 @@
   border-top: solid 5px #5d627b;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
   width: 50%;
+  white-space: pre-line;
 }
