--- a/css/twitCreate.css
+++ b/css/twitCreate.css
@@ -6,5 +6,9 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
-    margin-top: 60px;
-  }
+    margin: auto;
+}
+
+#userId{
+    width: 300px;
+}
