返信の編集でキャンセルボタン押下時に本文が消えなくする

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 #thread{
   margin: auto;
   padding: 1em 1em;
-  color: #616680;
+  color: #5d627b;
   background: white;
   border-top: solid 5px #5d627b;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
@@ -26,8 +26,9 @@
 }
 
 #edittext {
+  margin: auto;
   position: relative;
-  width:100%;
+  width: 95%;
 }
 
 #error{
