--- a/css/twitCreate.css
+++ b/css/twitCreate.css
@@ -8,14 +8,25 @@
     text-align: center;
     margin: auto;
     width: 50%;
+    color: #5d627b;
+    background: white;
+    border-top: solid 5px #5d627b;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
 }
 
 #userId{
     position: relative;
     width: 40%;
+    color: #5d627b;
+    background: white;
+    border-top: solid 5px #aab1cf;
 }
 
 #text{
     position: relative;
-    width: 100%;
+    width: 95%;
+    color: #5d627b;
+    background: white;
+    border-top: solid 5px #aab1cf;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
 }
